initial changes to modify namespace